FIX- spacing and style footer, header and main

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ body {
 .container {
     margin: 0 auto;
     max-width: 800px;
-    padding: 20px;
 }
 
 .row {
@@ -57,7 +56,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .navbar_list {
@@ -78,6 +77,10 @@ body {
 
 .main .row {
     padding-top: 50px; 
+}
+
+.main .container {
+    padding: 20px;
 }
 
 /*Cards*/
@@ -138,7 +141,6 @@ body {
     min-height: 30px;
 
 }
-
 
 /*hover*/
 
